<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">MemoirMate</string>
    <string name="title_pages">Pages</string>
    <string name="title_pocetna">Home</string>
    <string name="title_newpost">New Post</string>
    <string name="title_mojioglasi">More</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="account_deleted">Your account is deleted</string>
    <string name="signed_out">Signed out</string>
    <string name="post_image">Post image</string>
    <string name="omiljeni">Groups</string>
    <string name="confirm">Are you sure?</string>
    <string name="delete_post">Delete post</string>
    <string name="deleted">Post is deleted</string>
    <string name="pozovi">Call</string>
    <string name="posalji_poruku">Send message</string>
    <string name="fiksna_cena">fix price</string>
    <string name="dogovor">possible agreement</string>
    <string name="puta">times</string>
    <string name="vidjeno">Seen</string>
    <string name="published">Published</string>
    <string name="cena">Location</string>
    <string name="lokacija">Location</string>
    <string name="objavio">Posted by</string>
    <string name="delete">Delete</string>
    <string name="pretraga">Search posts</string>
    <string name="kategorija">Category</string>
    <string name="primeni">Apply</string>
    <string name="rastuce">Ascending</string>
    <string name="opadajuce">Descending</string>
    <string name="sortiraj_po_ceni">Sort by date</string>
    <string name="cena_do">To</string>
    <string name="cena_od">From</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="sve">All</string>
    <string name="upozorenje">Fill in all the fields</string>
    <string name="izaberite_sliku">" Choose a photo"</string>
    <string name="oglas_naslov">Post a new ad</string>
    <string name="oglas_postavljen">Ad is posted</string>
    <string name="greska">"Failed "</string>
    <string name="otpremljeno">"Uploaded "</string>
    <string name="naslov">Title</string>
    <string name="caption">"Caption"</string>
    <string name="dodaci">Just Happened!</string>
    <string name="odabrite_kategoriju">Select a category</string>
    <string name="odeca">Events</string>
    <string name="telefoni">Bucket List</string>
    <string name="obuca">Travel</string>>
    <string name="save">Save</string>
    <string name="enter_the_phone">Enter the phone</string>
    <string name="enter_the_comment">Enter the comment</string>
    <string name="enter_the_location">Enter the location</string>
    <string name="enter_the_username">Enter the username</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="rate">Rate</string>
    <string name="edit">Edit</string>
    <string name="comment_warning">Please, enter the
        comment!</string>
    <string name="azuriranje_proizvoda">Post is updated!</string>
    <string name="serbian">Serbian</string>

    <string name="english">English</string>
    <string name="change_language">Change language</string>
    <string name="choose_language">Choose language</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_picture">Choose picture</string>
    <string name="profile_updated">Profile updated</string>
    <string name="messages">Messages</string>
    <string name="filters">Filter Posts</string>
    <string name="favorites">Groups</string>
    <string name="my_profile">Profile and More</string>
    <string name="title_create">Create/Join</string>
    <string name="pages">Pages</string>
    <string name="change_theme">Change theme</string>
    <string name="choose_theme">Choose theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="facebook_application_id" translatable="false">260324235002954</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb260324235002954</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="ad_reported">Ad is reported</string>
    <string name="conversation_deleted">Conversation is deleted</string>
    <string name="report_ad">Report ad</string>
    <string name="report_ad_confirm">Are you sure you want to report this ad?</string>
    <string name="block_user">Block user</string>
    <string name="block_user_message">Are you sure you want to block this user?</string>
    <string name="user_blocked">User blocked</string>
    <string name="send">Send</string>
    <string name="no_results">No results!</string>
    <string name="invalid_prices">Price from must be lower from price to!</string>
    <string name="title_login">Login</string>
    <string name="events">Events</string>
    <string name="travel">Travel</string>
    <string name="family_ancestry">Family Ancestry</string>
    <string name="friend_history">Friend History</string>
    <string name="add_relation">Add New Relation</string>
    <string name="user_em_relation">User Email</string>
    <string name="rel_em_relation">Relative Email</string>
    <string name="rel_relation">Relationship</string>
    <string name="add_friend">Add New Friend</string>
    <string name="friend_em">Friend Email</string>


</resources>